ros2_ws/src/mypkg/log/build_2022-11-17_13-18-02/mypkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/dynepanch/ros2_ws/src/mypkg/install/mypkg/lib/python3.10/site-packages/mypkg/listener.py", line 2
    from rclpy,node import Node
              ^
SyntaxError: invalid syntax

